Adding in changes for jexni's new reroll code.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2388,3 +2388,6 @@ zombies.game.standby.delay=15.000
 zombies.game.load=3446.000
 [ctf]
 ctf.slowness=3.000
+[char creation]
+charcreation.stat.max=80.000
+charcreation.stat.min=30.000
