Tweaks to new memorize code, some zones and a fix for the level advancement problem

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -9,6 +9,13 @@ multiclass.epic.req.min=250.000
 frag.evil.penalty=1.000
 frag.leveldiff.modifier.low=0.500
 frag.leveldiff.modifier.high=1.200
+frag.required.50=0.050
+frag.required.51=0.125
+frag.required.52=0.250
+frag.required.53=0.500
+frag.required.54=1.000
+frag.required.55=2.000
+frag.required.56=4.000
 [debugs]
 debug.flee.stun=1.000
 #set debug.flee.stun to non-1 to turn off debugs.
@@ -1892,9 +1899,9 @@ terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
 [memorization]
 memorize.base.spell.time=12.000
-memorize.int.tick.factor=10.000
-memorize.pow.tick.factor=10.000
-memorize.wis.tick.factor=10.000
+memorize.int.tick.factor=16.000
+memorize.pow.tick.factor=16.000
+memorize.wis.tick.factor=16.000
 memorize.factor.multiclass=1.750
 memorize.factor.tupor=1.000
 memorize.factor.multi.commune=1.000
