Added Gem Mines.. objects (gems), mobs (random aggros dug up) and editted mining code to fit them in.  Also added properties for Gem Mines on Surface (max 2) and ud (max 6).

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2127,6 +2127,8 @@ world.quest.cost.abandon.time=24.000
 mines.maxSurfaceMap=30.000
 mines.maxTharnRift=2.000
 mines.maxUD=10.000
+mines.maxGemSurface=2.000
+mines.maxGemUD=6.000
 mines.reloadMins=25.000
 [zealots]
 zealots.memHitChance=7.000
